--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "next-fonts": "^1.5.1",
     "react": "^18.3.1",
